# anki-sync-after-close-add

./: CHANGELOG.md  LICENSE.txt  README.md  manifest.json  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
src/sync_after_close_add/: __about__.py  __init__.py
tests/: __init__.py
