[build-system]
requires = ["hatchling", "hatch-zipped-directory"]
build-backend = "hatchling.build"

[project]
name = "sync-after-close-add"
version = "0.1.0"
description = "Anki addon to sync after closing the add window"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "noriapi", email = "70106808+noriapi@users.noreply.github.com" },
]
dependencies = []

[project.urls]
Documentation = "https://github.com/noriapi/sync-after-close-add#readme"
Issues = "https://github.com/noriapi/sync-after-close-add/issues"
Source = "https://github.com/noriapi/sync-after-close-add"

[tool.hatch.build.targets.zipped-directory]
install-name = ""
sources = ["./src/sync_after_close_add"]


[tool.hatch.envs.default]
dependencies = ["aqt[qt6]>=2.1.54", "mypy>=1.0.0"]
[tool.hatch.envs.default.scripts]
build = "hatch build --target zipped-directory"
typecheck = "mypy --install-types --non-interactive {args:src/sync_after_close_add}"
